--- a/.travis.yml
+++ b/.travis.yml
@@ -6,14 +6,13 @@ python: 3.5
 
 env:
   - TOXENV=py35
-  - TOXENV=py34
-  - TOXENV=py33
   - TOXENV=py27
-  - TOXENV=py26
   - TOXENV=pypy
 
 # command to install dependencies, e.g. pip install -r requirements.txt --use-mirrors
-install: pip install -U tox
+install:
+  pip install -U tox
+  pip install -r requirements/test.txt
 
 # command to run tests, e.g. python setup.py test
 script: tox -e ${TOXENV}
