--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ jobs:
 
   test:
     docker:
-      - image: circleci/python:3.6
+      - image: python:3.6
     working_directory: ~/app
     steps:
       - checkout
@@ -19,7 +19,7 @@ jobs:
 
   deploy:
     docker:
-      - image: circleci/python:3.6
+      - image: python:3.6
     working_directory: ~/app
     steps:
       - checkout
